cmake_minimum_required(VERSION 2.6)
if(UNIX)
	if(USE_LOGGER_PLATFORM)
		find_library(HAVE_LIBPROC NAMES proc-3.2.8)
		if(HAVE_LIBPROC)
			add_executable(loggerkonoha command.c)
			set(LOGGER_PLATFORM_EXTRA_LIBRARY minikonoha)
			set(LOGGER_PLATFORM_EXTRA_LIBRARY ${LOGGER_PLATFORM_EXTRA_LIBRARY} pthread)
			target_link_libraries(loggerkonoha ${LOGGER_PLATFORM_EXTRA_LIBRARY})
			install(TARGETS loggerkonoha DESTINATION bin)
		else(HAVE_LIBPROC)
			message(FATAL_ERROR "libproc not found")
		endif(HAVE_LIBPROC)
	endif(USE_LOGGER_PLATFORM)
else(UNIX)
	message(FATAL_ERROR "logger platform is available only on UNIX environment.")
endif(UNIX)
