cmake_minimum_required(VERSION 2.6)
find_package(LibEvent)
if(EVENT_FOUND)
	include_directories(${EVENT_INCLUDE_DIR})
	set(PACKAGE_EXTRA_LIBRARY ${EVENT_LIBRARIES})
	set(PACKAGE_SOURCE_CODE libevent_glue.c libevent_event_glue.c)
	set(PACKAGE_SCRIPT_CODE libevent_glue.k libevent_event_glue.k)
	add_konoha_package(Lib.Libevent)
endif()
