find_package(MPI)
#message(STATUS "${MPI_INCLUDE_PATH}")
if(MPI_FOUND)
set(PACKAGE_SOURCE_CODE mpi_glue.c mpi_dummy.cpp)
set(PACKAGE_EXTRA_LIBRARY ${MPI_LIBRARIES})
set(CMAKE_COMPILE_FLAGS ${CMAKE_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
set(CMAKE_LINK_FLAGS    ${CMAKE_LINK_FLAGS}    ${MPI_LINK_FLAGS})
include_directories(${MPI_INCLUDE_PATH})
add_konoha_package(Lib.Mpi)
endif(MPI_FOUND)
