cmake_minimum_required(VERSION 2.6)

set(PACKAGE_EXTRA_LIBRARY)
set(PACKAGE_SCRIPT_CODE sql_glue.k)
set(PACKAGE_SOURCE_CODE sql_glue.c)

find_library(HAVE_LIBSQLITE NAMES sqlite3)
find_program(PG_CONFIG NAMES pg_config)
find_package(MySQL)

if(MYSQL_FOUND OR HAVE_LIBSQLITE OR PG_CONFIG)
	if(MYSQL_FOUND)
		include_directories(${MYSQL_INCLUDE_DIR})
		set(PACKAGE_EXTRA_LIBRARY ${PACKAGE_EXTRA_LIBRARY} ${MYSQL_LIBRARIES})
		set(HAVE_MYSQL 1)
	endif(MYSQL_FOUND)

	if(HAVE_LIBSQLITE)
		set(PACKAGE_EXTRA_LIBRARY ${PACKAGE_EXTRA_LIBRARY} ${HAVE_LIBSQLITE})
	endif(HAVE_LIBSQLITE)

	if(PG_CONFIG)
		execute_process(
			COMMAND ${PG_CONFIG}
			OUTPUT_VARIABLE PG_CONFIG_RESULTS
			OUTPUT_STRIP_TRAILING_WHITESPACE
		)
		string(REGEX MATCH "/[^=]+/include/postgresql" PG_INCLUDE_DIR ${PG_CONFIG_RESULTS})
		string(REGEX MATCH "/[^=]+/server" PG_INCLUDE_DIR_SERVER ${PG_CONFIG_RESULTS})
		string(REGEX MATCH "/[^=]+/lib" PG_LIB_DIR ${PG_CONFIG_RESULTS})
		find_library(HAVE_LIBPOSTGRESQL NAMES pq
				HINTS ${PG_LIB_DIR})
		set(PACKAGE_EXTRA_LIBRARY ${PACKAGE_EXTRA_LIBRARY} ${HAVE_LIBPOSTGRESQL})
		set(PG_INCLUDE_DIR_ALL ${PG_INCLUDE_DIR} ${PG_INCLUDE_DIR_SERVER})
		set(HAVE_PSQL 1)
		include_directories(${PG_INCLUDE_DIR_ALL})
	endif(PG_CONFIG)

	add_definitions(-DHAVE_KONOHA_SQL_CONFIG_H)
	configure_file (
		"${CMAKE_CURRENT_SOURCE_DIR}/konoha_sql.config.h.cmake"
		"${CMAKE_CURRENT_BINARY_DIR}/konoha_sql.config.h"
	)

	include_directories(${CMAKE_CURRENT_BINARY_DIR})
	set(PACKAGE_SOURCE_CODE ${PACKAGE_SOURCE_CODE}
		sql_glue.c
	)
	add_konoha_package(MiniKonoha.Sql)
else(MYSQL_FOUND OR HAVE_LIBSQLITE OR PG_CONFIG)
	show_package_warning(konoha.sql)
endif(MYSQL_FOUND OR HAVE_LIBSQLITE OR PG_CONFIG)
